# Wizzy_app

./: pubspec.yaml
.github/workflows/: build_windows.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
lib/: firebase_options.dart  main.dart
lib/core/services/: notification_service.dart
lib/features/admin/screens/: add_product_screen.dart  admin_dashboard_screen.dart
lib/features/ai_assistant/screens/: ai_chat_screen.dart
lib/features/auth/screens/: register_screen.dart  splash_screen.dart
lib/features/auth/services/: auth_service.dart
lib/features/core/services/: notification_service.dart
lib/features/home/screens/: ad_player_screen.dart  category_picker_screen.dart  home_screen.dart
lib/features/marketplace/screens/: marketplace_screen.dart
lib/features/messenger/models/: message_model.dart
lib/features/messenger/screens/: chat_screen.dart  users_list_screen.dart
lib/features/profile/screens/: settings_screen.dart
lib/features/quiz/screens/: arena_menu_screen.dart  lucky_draw_screen.dart  quiz_result_screen.dart  quiz_screen.dart  tournament_lobby_screen.dart
lib/shared/widgets/: dls_card.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt
